# drf_int

./: README.md  pyproject.toml
blog/: admin.py  models.py  serializers.py  views.py
blog/migrations/: 0001_initial.py
core/: settings.py  urls.py
locale/ky/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
